--- a/js_bom/bevasarlolista/index.html
+++ b/js_bom/bevasarlolista/index.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .delbtn {
+            padding: 0.5rem;
+            background: #ccc;
+            cursor: pointer;
+            margin-left: 0.5rem;
+        }
+
+        li {
+            padding: 0.5rem;
+        }
+    </style>
 </head>
 <body>
 <form id="form1">
