--- a/index.html
+++ b/index.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            height: 150vh;
+        }
+
+        #down {
+            position: absolute;
+            bottom: -400px
+        }
+
+        #scrollup {
+            position: fixed;
+            bottom: 20px;
+        }
+        #scrolldown{
+            position: fixed;
+        }
+    </style>
 </head>
 <body>
-
+<button id="open">Open</button>
+<button id="close">Close</button>
+<button id="resize">Resize</button>
+<button id="windowisopen">Window is open?</button>
+<button id="up">Bottom</button>
+<button id="down">Top</button>
+<button id="scrollup">scroll up</button>
+<button id="scrolldown">scroll down</button>
+<script src="js_bom_feladat.js"></script>
 </body>
 </html>
